# 0.00.51 (62332) Mar 8, 2012
Matching Game: Made plus signs larger when there are less plus signs
Matching Game: Added a 2x2 grid
Matching Game: Added plus sign representations for denominator 2-6
Matching Game: Added a developer control for resampling the current level
Matching Game: Added developer controls
Matching Game: Fixed: scales + number line should be centered vertically between cells at top and bottom
Matching Game: Moved scales and starting cell areas down a little bit
Matching Game: Added some vertical padding to the top of the cells
Matching Game: Center "my matches" under the top left cell
Intro & Equality Lab: Fixed: If you change the denominator then click on glass then it creates a cup of the incorrect height
Intro & Equality Lab: Fixed: When clicking on water glasses (or maybe others), it leaves one behind and doesn't update the numerator right away
Intro & Equality Lab: Fixed: Double clicking causes problems for bars, makes things go out of sync
Intro & Equality Lab: Fixed: Put the clipping region just below the bucket
Intro & Equality Lab: Fixed: The image of the "cup" on the Equality Lab bucket isn't right (it shows the vertical boxes).
Matching Game: Fixed: Some edges appear to get cut off in the matching game when the matches are put in the containers
# 0.00.50 (62249) Mar 6, 2012
Matching Game: Fixed: Audio turns off after each level
Matching Game: Added delay time to the pitch playback so that low sounds don't end too quickly
Matching Game: Avoid matching numerical representations
Matching Game: Fixed: With numbers larger than 1, the representations shrink a bit too much when in the containers
Matching Game: Fixed: With the "+" representation, several edges seem to get cut off
Matching Game: When a match is kept, have the matches in the containers be each closer to the equal sign instead of pushed to the edge of the match "container"
Matching Game: Made the equals sign in score cells larger